RESOLVED FIXED 187244
[cairo] Doesn't paint box-shadow with zero blur-radius
https://bugs.webkit.org/show_bug.cgi?id=187244
Summary [cairo] Doesn't paint box-shadow with zero blur-radius
Fujii Hironori
Reported 2018-07-02 02:40:58 PDT
Created attachment 344086 [details] current GTK's inset-expected.png failing to draw some box-shadow [cairo] Doesn't paint box-shadow with zero blur-radius fast/box-shadow/inset.html is the test case.
Attachments
current GTK's inset-expected.png failing to draw some box-shadow (26.87 KB, image/png)
2018-07-02 02:40 PDT, Fujii Hironori
no flags
WIP patch (656 bytes, patch)
2018-07-02 02:47 PDT, Fujii Hironori
no flags
inset-expected.png after this change (27.79 KB, image/png)
2018-07-02 02:49 PDT, Fujii Hironori
no flags
Patch (67.27 KB, patch)
2018-07-03 02:27 PDT, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2018-07-02 02:47:48 PDT
Created attachment 344087 [details] WIP patch
Fujii Hironori
Comment 2 2018-07-02 02:49:06 PDT
Created attachment 344088 [details] inset-expected.png after this change
Fujii Hironori
Comment 3 2018-07-02 02:57:18 PDT
This is the screenshot of the important blog for WebKitGTK+ after this fix :-) https://photos.app.goo.gl/87b64JeZhJ1GDK2N7
Zan Dobersek
Comment 4 2018-07-02 06:10:27 PDT
(In reply to Fujii Hironori from comment #1) > Created attachment 344087 [details] > WIP patch LGTM, but please make it reviewable.
Michael Catanzaro
Comment 5 2018-07-02 07:52:12 PDT
Thanks for fixing my blog!
Michael Catanzaro
Comment 6 2018-07-02 07:52:29 PDT
Comment on attachment 344087 [details] WIP patch View in context: https://bugs.webkit.org/attachment.cgi?id=344087&action=review BTW, I'm really curious how you managed to debug this issue. > Source/WebCore/platform/graphics/cairo/CairoOperations.cpp:616 > // We can't avoid ShadowBlur if the shadow has blur. > - if (color.isVisible() && blur) > + if (color.isVisible()) The comment needs to be updated now.
Fujii Hironori
Comment 7 2018-07-03 02:27:11 PDT
(In reply to Michael Catanzaro from comment #6) > > BTW, I'm really curious how you managed to debug this issue. I was just lucky. I was grepping "blur" and found the suspicious condition.
Fujii Hironori
Comment 8 2018-07-03 02:27:42 PDT
Fujii Hironori
Comment 9 2018-07-03 20:19:16 PDT
Comment on attachment 344169 [details] Patch Clearing flags on attachment: 344169 Committed r233495: <https://trac.webkit.org/changeset/233495>
Fujii Hironori
Comment 10 2018-07-03 20:19:19 PDT
All reviewed patches have been landed. Closing bug.
Fujii Hironori
Comment 11 2018-07-05 01:04:24 PDT
It turned out this is not a right fix. I filed bug 187336.
Note You need to log in before you can comment on or make changes to this bug.