[cairo] Doesn't paint box-shadow with zero blur-radius https://bugs.webkit.org/show_bug.cgi?id=187244

Reviewed by Žan Doberšek.

Source/WebCore:

Cairo::ShadowState::isRequired() returned false if blur-radius is
zero.

No new tests (Covered by existing tests).

* platform/graphics/cairo/CairoOperations.cpp:
(WebCore::Cairo::ShadowState::isRequired const): Do not check blur
is zero.

LayoutTests:

* platform/gtk/fast/box-shadow/inset-expected.png: Updated.

Canonical link: https://commits.webkit.org/202580@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233495 268f45cc-cd09-0410-ab3c-d52691b4dbfc